[gd_scene load_steps=2 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="."]
margin_right = 1027.0
margin_bottom = 606.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pertanyaan" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -50.0
margin_right = -820.0
margin_bottom = 1.0
text = "Pertanyaan 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pertanyaan2" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -820.0
margin_top = -49.0
margin_right = -615.0
margin_bottom = 1.0
text = "Pertanyaan 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pertanyaan3" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -614.0
margin_top = -49.0
margin_right = -414.0
margin_bottom = 1.0
text = "Pertanyaan 3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pertanyaan4" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -409.0
margin_top = -50.0
margin_right = -204.0
text = "Pertanyaan 4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pertanyaan5" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.0
margin_top = -49.0
margin_right = 1.0
margin_bottom = 1.0
text = "Pertanyaan 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MobTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Score" type="Label" parent="."]
margin_right = 124.0
margin_bottom = 67.0
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -101.0
margin_bottom = 72.0
text = "10"
align = 1
valign = 1

[node name="healthbar" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.5
margin_right = 50.5
margin_bottom = 72.0
text = "10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
